# subseasonal_data

./: DATA.md  README.md  setup.cfg
.github/workflows/: codeql-analysis.yml
doc/: conf.py  index.rst  intro.rst  reference.rst
examples/: Examples.ipynb  Getting_Started.ipynb
subseasonal_data/: data_loaders.py  downloader.py  utils.py
subseasonal_data/tests/: test_data_loaders.py  test_downloader.py
