[metadata]
name = subseasonal_data
version = 0.0.1
description = Data access package for the SubseasonalClimateUSA dataset.

[options]
packages = find_namespace:
install_requires =
    numpy
    pandas
    scikit-learn
    netCDF4

[options.packages.find]
include =
    downloader
    loaders
    utils
