[metadata]
name = subseasonal_data
version = 0.0.2
description = Data access package for the SubseasonalClimateUSA dataset.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
install_requires =
    numpy
    pandas
    scikit-learn
    netCDF4

[options.packages.find]
include =
    downloader
    loaders
    utils
