[metadata]
name = subseasonal_data
version = 0.0.7
description = Data access package for the SubseasonalClimateUSA dataset.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/microsoft/subseasonal_data
license_file = LICENSE

[options]
packages =
    subseasonal_data
install_requires =
    numpy
    pandas
    scikit-learn
    netCDF4
